[tool.poetry]
name = "ulta"
version = "0.1.0"
description = ""
authors = ["wafiq <thealiengunner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
marshmallow = "^3.14.0"
simplejson = "^3.17.5"
lxml = "^4.6.3"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
